Corrige z-index titulo (arregla bug al hacer scroll ya que la animación de la card quedaba sobre el titulo)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,7 @@ header {
   position: fixed;
   text-align: center;
   top: 0;
+  z-index: 999;
 }
 
 header h1 {
